syntax = "proto3";

package pb;
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Message {

  rpc Notify(NotifyRequest) returns (Response) {
    option (google.api.http) = {
      post: "/notify"
      body: "*"
    };
  }

  rpc GetUserOnline(google.protobuf.Empty) returns (UserOnlineResponseForm){
    option (google.api.http) = {
      get: "/online"
    };
  }
}

message NotifyRequest {
  int64 id = 1;
  int64 op_code = 2;
  int64 to_connID = 3;
  int64 from_conn_id = 4;
  string from_uid = 5;
  string to_id = 6;
  int32 receiver_type = 7;
  string content = 8;
}

message Response {
  string msg = 1;
  int32 code = 2;
  string data = 3;
  int64 page = 4;
  int64 size = 5;
  int64 total = 6;
}

message UserOnlineResponseForm {
  string msg = 1;
  int32 code = 2;
  repeated UserForm data = 3;
  int64 page = 4;
  int64 size = 5;
  int64 total = 6;
}
message UserForm {
  string user_id = 1;
  string username = 2;
}
